# BeancountPilot

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  README_zh.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.streamlit/: config.toml
config/: ai.yaml  application.yaml  database.yaml  deg.yaml
config/providers/: alipay.yaml  wechat.yaml
docs/: appendix_prompt_templates.md  architecture.md  project_timeline.md  proposal.md
frontend/: __init__.py  app.py  config.py  i18n.py
frontend/components/: __init__.py  transaction_table.py
frontend/locales/: en.json  zh.json
frontend/pages/: __init__.py  classify.py  settings.py  upload.py
frontend/views/: __init__.py  classify.py  home.py  settings.py  upload.py
src/: __init__.py
src/ai/: __init__.py  base.py  deepseek_provider.py  factory.py  ollama_provider.py  openai_provider.py  prompt.py
src/api/: __init__.py  main.py  progress_store.py
src/api/routes/: __init__.py  ai_config.py  chart_of_accounts.py  classify.py  feedback.py  generate.py  knowledge.py  maintenance.py  progress.py  rules.py  upload.py  users.py  ws.py
src/api/schemas/: __init__.py  transaction.py
src/core/: __init__.py  classifier.py  deg_catalog.py  deg_integration.py  feedback.py  rule_engine.py
src/db/: __init__.py  init.py  models.py  repositories.py  session.py
src/utils/: __init__.py  config.py  csv_table_parser.py  logger.py
tests/: __init__.py
tests/integration/: __init__.py  test_api_integration.py
tests/unit/: test_ai_base.py  test_ai_factory.py  test_ai_prompt.py  test_api_schemas.py  test_core_classifier_reliability.py  test_core_rule_engine.py  test_db_init.py  test_db_models.py  test_db_repositories.py  test_generate_reliability.py  test_utils_config.py
